--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "local": "cross-env DATA=local nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -14,11 +15,14 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.7",
+    "dotenv": "^8.2.0",
     "nuxt": "^2.0.0",
+    "query-string": "^6.12.0",
     "vue-moment": "^4.1.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
+    "cross-env": "^7.0.2",
     "push-dir": "^0.4.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2"
